--- a/package.json
+++ b/package.json
@@ -3,17 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "electron-log": "^2.2.17",
     "react": "^16.5.2",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "yarn": "^1.10.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start-js": "./node_modules/.bin/react-scripts start",
+    "start": "./node_modules/.bin/npm-run-all -p watch-css start-js",
+    "build-js": "./node_modules/.bin/react-scripts build",
+    "build": "./node_modules/.bin/npm-run-all build-css build-js",
+    "build-css": "./node_modules/.bin/node-sass-chokidar src/ -o src/",
+    "watch-css": "yarn build-css && ./node_modules/.bin/node-sass-chokidar src/ -o src/ --watch --recursive",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "node-sass-chokidar": "^1.3.4",
+    "npm-run-all": "^4.1.3"
   }
 }
